--- a/Music transcribe/src/main/Menu.fxml
+++ b/Music transcribe/src/main/Menu.fxml
@@ -15,7 +15,7 @@
          <children>
             <TextField id="us" layoutX="16.0" layoutY="103.0" prefHeight="26.0" prefWidth="287.0" promptText="Username" />
             <TextField layoutX="16.0" layoutY="147.0" prefHeight="26.0" prefWidth="287.0" promptText="Password" />
-            <Button id="log in button" layoutX="141.0" layoutY="201.0" mnemonicParsing="false" text="Log in" />
+            <Button id="log in button" layoutX="141.0" layoutY="201.0" mnemonicParsing="false" onAction="#logInButton" text="Log in" />
             <Hyperlink layoutX="110.0" layoutY="255.0" text="Forgot password?" />
             <Label focusTraversable="false" layoutX="141.0" layoutY="61.0" text="Welcome" />
          </children>
