--- a/Music transcribe/src/main/Transcribe_tab.fxml
+++ b/Music transcribe/src/main/Transcribe_tab.fxml
@@ -6,7 +6,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Transcribe_controller">
    <children>
       <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#logOutButton" text="Log out" />
-      <Button layoutX="158.0" layoutY="200.0" mnemonicParsing="false" text="Transcribe!" />
-      <Button layoutX="158.0" layoutY="165.0" mnemonicParsing="false" onAction="#choosefile" text="choose a file" />
+      <Button layoutX="158.0" layoutY="200.0" mnemonicParsing="false" onAction="#uploadFile" text="Transcribe!" />
+      <Button layoutX="158.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseFile" text="choose a file" />
    </children>
 </AnchorPane>
