--- a/Music transcribe/src/main/Transcribe_tab.fxml
+++ b/Music transcribe/src/main/Transcribe_tab.fxml
@@ -1,11 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Transcribe_controller">
-   <children>
-      <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#logOutButton" text="Log out" />
-      <Button layoutX="263.0" layoutY="188.0" mnemonicParsing="false" onAction="#uploadFile" text="Transcribe!" />
-   </children>
-</AnchorPane>
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Transcribe_controller">
+   <center>
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <Button layoutX="426.0" layoutY="188.0" mnemonicParsing="false" onAction="#uploadFile" text="Transcribe!" />
+            <TextField fx:id="endTime" layoutX="249.0" layoutY="188.0" />
+            <TextField fx:id="beginTime" layoutX="57.0" layoutY="188.0" />
+            <Label layoutX="66.0" layoutY="160.0" text="Transcribe begin time" />
+            <Label layoutX="271.0" layoutY="160.0" text="Transcribe end time" />
+            <Button layoutX="14.0" layoutY="374.0" mnemonicParsing="false" onAction="#quitButton" text="Quit" />
+            <Button layoutX="272.0" layoutY="374.0" mnemonicParsing="false" onAction="#logOutButton" text="Log out" />
+         </children>
+      </AnchorPane>
+   </center>
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+         <effect>
+            <Blend />
+         </effect>
+      </MenuBar>
+   </top>
+</BorderPane>
