--- a/Music transcribe/src/main/Sign_Up.fxml
+++ b/Music transcribe/src/main/Sign_Up.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,9 +12,10 @@
       <TextField id="username" fx:id="usernameBox" layoutX="226.0" layoutY="149.0" promptText="Username" />
       <TextField id="Password_box" fx:id="passwordBox" layoutX="226.0" layoutY="188.0" promptText="Password" />
       <TextField id="Confirm_password_box" fx:id="passConfirmBox" layoutX="226.0" layoutY="225.0" promptText="Confirm password" />
-      <Button layoutX="226.0" layoutY="267.0" mnemonicParsing="false" onAction="#sign_up_button" text="Sign up" />
+      <Button layoutX="272.0" layoutY="266.0" mnemonicParsing="false" onAction="#sign_up_button" text="Sign up" />
       <Label layoutX="245.0" layoutY="73.0" text="Welcome to my app!" />
-      <Button layoutX="323.0" layoutY="267.0" mnemonicParsing="false" text="Log in" />
       <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#quitButton" text="Quit" />
+      <Label layoutX="194.0" layoutY="309.0" text="Already have an account?" />
+      <Hyperlink layoutX="334.0" layoutY="306.0" onAction="#logInButton" text="Log in instead" />
    </children>
 </AnchorPane>
