--- a/Music transcribe/src/main/Menu.fxml
+++ b/Music transcribe/src/main/Menu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,7 +18,7 @@
             <AnchorPane layoutX="350.0" layoutY="41.0" prefHeight="318.0" prefWidth="309.0">
                <children>
                   <TextField id="us" fx:id="userEmailBox" layoutX="16.0" layoutY="103.0" prefHeight="26.0" prefWidth="287.0" promptText=" Username or Email" />
-                  <TextField fx:id="passwordBox" layoutX="16.0" layoutY="147.0" prefHeight="26.0" prefWidth="287.0" promptText="Password" />
+                  <PasswordField fx:id="passwordBox" layoutX="16.0" layoutY="148.0" prefHeight="26.0" prefWidth="287.0" promptText="Password" />
                   <Button id="log in button" layoutX="141.0" layoutY="201.0" mnemonicParsing="false" onAction="#logInButton" text="Log in" />
                   <Hyperlink layoutX="110.0" layoutY="255.0" text="Forgot password?" />
                   <Label focusTraversable="false" layoutX="141.0" layoutY="61.0" text="Welcome" />
