--- a/Music transcribe/src/main/Sign_Up.fxml
+++ b/Music transcribe/src/main/Sign_Up.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -10,8 +11,8 @@
    <children>
       <TextField id="Email_box" fx:id="emailBox" layoutX="226.0" layoutY="112.0" promptText="Email" />
       <TextField id="username" fx:id="usernameBox" layoutX="226.0" layoutY="149.0" promptText="Username" />
-      <TextField id="Password_box" fx:id="passwordBox" layoutX="226.0" layoutY="188.0" promptText="Password" />
-      <TextField id="Confirm_password_box" fx:id="passConfirmBox" layoutX="226.0" layoutY="225.0" promptText="Confirm password" />
+      <PasswordField fx:id="passwordBox" layoutX="226.0" layoutY="187.0" prefHeight="26.0" prefWidth="149.0" promptText="Password" />
+      <PasswordField fx:id="passConfirmBox" layoutX="226.0" layoutY="225.0" prefHeight="26.0" prefWidth="149.0" promptText="Confirm password" />
       <Button layoutX="272.0" layoutY="266.0" mnemonicParsing="false" onAction="#sign_up_button" text="Sign up" />
       <Label layoutX="245.0" layoutY="73.0" text="Welcome to my app!" />
       <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#quitButton" text="Quit" />
