--- a/Music transcribe/src/main/Transcribe_tab.fxml
+++ b/Music transcribe/src/main/Transcribe_tab.fxml
@@ -14,16 +14,16 @@
    <center>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Button layoutX="193.0" layoutY="161.0" mnemonicParsing="false" onAction="#transcribe" text="Transcribe!" />
-            <TextField fx:id="endTime" layoutX="245.0" layoutY="117.0" />
-            <TextField fx:id="beginTime" layoutX="53.0" layoutY="117.0" />
-            <Label layoutX="62.0" layoutY="89.0" text="Transcribe begin time" />
-            <Label layoutX="267.0" layoutY="89.0" text="Transcribe end time" />
+            <Button layoutX="261.0" layoutY="165.0" mnemonicParsing="false" onAction="#transcribe" text="Transcribe!" />
+            <TextField fx:id="endTime" layoutX="322.0" layoutY="125.0" />
+            <TextField fx:id="beginTime" layoutX="130.0" layoutY="125.0" />
+            <Label layoutX="139.0" layoutY="97.0" text="Transcribe begin time" />
+            <Label layoutX="344.0" layoutY="97.0" text="Transcribe end time" />
             <Button layoutX="14.0" layoutY="362.0" mnemonicParsing="false" onAction="#quitButton" text="Quit" />
             <Button layoutX="272.0" layoutY="362.0" mnemonicParsing="false" onAction="#logOutButton" text="Log out" />
-            <Button layoutX="467.0" layoutY="263.0" mnemonicParsing="false" onAction="#previewButton" text="Preview" />
-            <Button layoutX="423.0" layoutY="55.0" mnemonicParsing="false" onAction="#uploadFile" text="Choose a file!" />
-            <Label fx:id="fileLabel" layoutX="306.0" layoutY="165.0" />
+            <Button layoutX="270.0" layoutY="284.0" mnemonicParsing="false" onAction="#previewButton" text="Preview" />
+            <Button layoutX="254.0" layoutY="57.0" mnemonicParsing="false" onAction="#uploadFile" text="Choose a file!" />
+            <Label fx:id="fileLabel" layoutX="279.0" layoutY="200.0" prefHeight="17.0" prefWidth="38.0" />
          </children>
       </AnchorPane>
    </center>
