--- a/Music transcribe/src/main/Transcribe_tab.fxml
+++ b/Music transcribe/src/main/Transcribe_tab.fxml
@@ -28,6 +28,8 @@
             <Slider fx:id="progressBar" layoutX="100.0" layoutY="293.0" prefHeight="14.0" prefWidth="396.0" />
             <Button layoutX="318.0" layoutY="244.0" mnemonicParsing="false" onAction="#pauseButton" text="Play/Pause" />
             <Label fx:id="timeLabel" layoutX="457.0" layoutY="307.0" />
+            <Slider fx:id="volumeBar" layoutX="538.0" layoutY="199.0" orientation="VERTICAL" prefHeight="150.0" prefWidth="14.0" />
+            <Label layoutX="525.0" layoutY="345.0" text="Volume" />
          </children>
       </AnchorPane>
    </center>
